[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://HPBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 6.07468 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="detector" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -25 )
shape = SubResource( 3 )

[node name="HPBar" parent="." instance=ExtResource( 3 )]
margin_left = -30.0
margin_top = -50.0
margin_right = 30.0
margin_bottom = -45.0
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
